--- a/backend/eager/README
+++ b/backend/eager/README
@@ -1,6 +1,6 @@
 Build instructions
 
-0 - Optionally create a conda environment to isolate Python library installations
+0 - Create a conda environment to isolate Python library installations
 
     $ conda create --name cpp_backend_poc_eager python=3
     $ conda activate cpp_backend_poc_eager
@@ -9,18 +9,20 @@ Build instructions
 
   1-a - Checkout PyTorch:
 
-        $ git checkout https://github.com/pytorch/pytorch.git
+        $ git clone https://github.com/pytorch/pytorch.git
         $ git submodule sync && git submodule update --init --recursive
 
   1-b - Install PyTorch dependencies:
 
         conda install astunparse numpy ninja pyyaml mkl mkl-include setuptools cmake cffi typing_extensions future six requests dataclasses
 
-  1-c - Install torch::deploy dependencies:
+  1-d - Install torch::deploy dependencies:
 
-        On CentOS 8: $ sudo dnf install bzip2-devel gdbm-devel libffi-devel libnsl2-devel  libtirpc-devel ncurses-devel readline-devel xz-devel
+        On CentOS 8: $ sudo dnf install bzip2-devel gdbm-devel libffi-devel libnsl2-devel  libtirpc-devel ncurses-devel readline-devel xz-devel glog-devel spdlog-devel utf8cpp-devel
 
-  1-d - Build PyTorch with torch::deploy:
+        On Ubuntu: $ sudo apt get install libomp-dev libffi-dev libncursesw5-dev libbz2-dev libgdbm-dev libtirpc-dev libreadline-dev libgtest-dev
+
+  1-e - Build PyTorch with torch::deploy:
 
         USE_DEPLOY=ON BUILD_CAFFE2=OFF BUILD_CAFFE2_OPS=OFF python setup.py develop
 
@@ -28,7 +30,7 @@ Build instructions
 
     2-a Checkout cpprestsdk:
 
-        $ git checkout https://github.com/microsoft/cpprestsdk.git
+        $ git clone https://github.com/microsoft/cpprestsdk.git
         $ git submodule sync && git submodule update --init --recursive
 
     2-b Install cpprestsdk dependencies:
@@ -42,9 +44,30 @@ Build instructions
        $ cmake -DCMAKE_INSTALL_PREFIX=<cpprestsdk_ROOT_DIR>/install ..
        $ make install -j16
 
+3 - Prepare C++ BertTokenizer
+
+    3-a Checkout Radish repository
+
+        $ git clone https://github.com/LieluoboAi/radish.git
+        $ cd radish
+        $ curl -o my.patch https://gist.githubusercontent.com/mreso/dff9839ced0242e4e697874f487bfe42/raw/1b8082a71a45564c88150b86655108a8daeaaea0/my.patch
+        $ git apply my.patch
+
+4 - Package/Trace Bert Model
+
+    $ cd serve/backend/eager
+    $ python3.8 -m venv transformers_venv
+    $ source transformers_venv/bin/activate
+    $ pip install -r requirements.txt
+    $ mkdir models
+    $ python Export_BERT_model_only.py
+
 3 - Build this example:
 
     $ mkdir ./build
     $ cd ./build
-    $ cmake -DCMAKE_PREFIX_PATH="<cpprestsdk_ROOT_DIR>/install;pytorch_ROOT_DIR>" ..
+    $ cmake -DCMAKE_PREFIX_PATH="<cpprestsdk_ROOT_DIR>/install;pytorch_ROOT_DIR>" -DSPDLOG_FMT_EXTERNAL=ON -DRADISH_INSTALL_PREFIX="<PATH_TO_RADISH_REPO>"..
     $ make all -j16
+    $ curl -o vocab.txt https://huggingface.co/bert-base-cased-finetuned-mrpc/resolve/main/vocab.txt
+
+    $ ./test_tokenizer ../transformers_venv/lib/python3.8/site-packages/ ../models/bert_model_only.pt ../models/bert_model_only_traced.pt
